fix: corrigir API_URL hardcoded em login.html para produção

--- a/public/login.html
+++ b/public/login.html
@@ -214,7 +214,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000';
+        const API_URL = window.location.origin;
 
         function switchTab(tab) {
             // Atualiza tabs
