--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - WhatsApp Dispatcher</title>
+    <title>Login - Nexus Disparador</title>
     <style>
         * {
             margin: 0;
@@ -161,7 +161,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📱 WhatsApp Dispatcher</h1>
+            <h1>📱 Nexus Disparador</h1>
             <p>Sistema de Gerenciamento de Campanhas</p>
         </div>
 
@@ -209,7 +209,7 @@
         </div>
 
         <div class="footer">
-            © 2024 WhatsApp Dispatcher. Todos os direitos reservados.
+            © 2024 Nexus Disparador. Todos os direitos reservados.
         </div>
     </div>
 
