rebrand: renomear Nexus Disparador para Vext
MUDANÇAS:
- Nome do projeto: Nexus Disparador → Vext
- Título do site e login page
- Nome do package.json
- Firebase project IDs (vext-9b811)
- Guia de uso e documentação
- Todos os headers e footers da UI

OBJETIVO:
- Identidade mais simples e moderna
- Nome mais fácil de lembrar (Vext)
- Evitar detecção de 'Disparador' como bot pelo WhatsApp

--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Nexus Disparador</title>
+    <title>Login - Vext</title>
     <style>
         * {
             margin: 0;
@@ -161,7 +161,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📱 Nexus Disparador</h1>
+            <h1>📱 Vext</h1>
             <p>Sistema de Gerenciamento de Campanhas</p>
         </div>
 
@@ -209,7 +209,7 @@
         </div>
 
         <div class="footer">
-            © 2025 Nexus Disparador. Todos os direitos reservados.
+            © 2025 Vext. Todos os direitos reservados.
         </div>
     </div>
 
