--- a/public/index.html
+++ b/public/index.html
@@ -266,17 +266,18 @@
                     </div>
 
                     <!-- Configurações de Delay -->
-                    <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px; border: 2px solid #e0e0e0;">
-                        <h4 style="margin-top: 0; margin-bottom: 15px; display: flex; align-items: center; gap: 8px;">
-                            ⏱️ Configurações de Tempo
-                        </h4>
-                        
-                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
-                            <div class="form-group" style="margin-bottom: 0;">
-                                <label style="display: flex; align-items: center; gap: 5px;">
-                                    ⏳ Delay entre mensagens (segundos)
-                                    <span style="font-size: 0.85em; color: #666; font-weight: normal;">
-                                        - Tempo de espera entre cada envio
+                    <div class="dispatch-config-card">
+                        <div class="dispatch-config-header">
+                            <span class="dispatch-config-icon">⏱️</span>
+                            <h4>Configurações de Tempo</h4>
+                        </div>
+
+                        <div class="dispatch-config-grid">
+                            <div class="form-group dispatch-config-group">
+                                <label class="dispatch-config-label">
+                                    ⏳ Delay maximo entre mensagens (segundos)
+                                    <span class="dispatch-config-helper">
+                                        - Os envios serão disparados em intervalos de tempo aleatórios
                                     </span>
                                 </label>
                                 <input 
@@ -288,16 +289,16 @@
                                     max="360"
                                     placeholder="Ex: 3"
                                 >
-                                <small style="color: #666; margin-top: 5px; display: block;">
+                                <small class="dispatch-config-note">
                                     💡 Recomendado: 3-5 segundos | Máximo: 360s (6 minutos)
                                 </small>
                             </div>
 
-                            <div class="form-group" style="margin-bottom: 0;">
-                                <label style="display: flex; align-items: center; gap: 5px;">
-                                    🔄 Delay entre números (segundos)
-                                    <span style="font-size: 0.85em; color: #666; font-weight: normal;">
-                                        - Tempo adicional ao trocar de contato
+                            <div class="form-group dispatch-config-group">
+                                <label class="dispatch-config-label">
+                                    🔄 Delay entre instâncias (segundos)
+                                    <span class="dispatch-config-helper">
+                                        - Tempo adicional ao trocar de instância
                                     </span>
                                 </label>
                                 <input 
@@ -309,15 +310,16 @@
                                     max="120"
                                     placeholder="Ex: 5"
                                 >
-                                <small style="color: #666; margin-top: 5px; display: block;">
+                                <small class="dispatch-config-note">
                                     💡 Recomendado: 5-10 segundos
                                 </small>
                             </div>
                         </div>
 
-                        <div style="margin-top: 15px; padding: 10px; background: #fff3cd; border-radius: 4px; border-left: 4px solid #ffc107;">
-                            <small style="color: #856404;">
-                                <strong>⚠️ Importante:</strong> Delays muito curtos podem causar bloqueio pelo WhatsApp. 
+                        <div class="dispatch-config-warning">
+                            <span class="dispatch-config-warning-icon">⚠️</span>
+                            <small>
+                                <strong>Importante:</strong> Delays muito curtos podem causar bloqueio pelo WhatsApp.
                                 Use valores maiores para envios em larga escala.
                             </small>
                         </div>
