--- a/public/login.html
+++ b/public/login.html
@@ -52,8 +52,7 @@
                     </div>
 
                     <p class="text-lg text-slate-200/90 leading-relaxed max-w-xl">
-                        Centralize campanhas, contatos e disparos em um único painel. Conecte múltiplos números, acompanhe métricas em tempo real e mantenha seu time sempre online.
-                    </p>
+                        O Único disparador do mercado com controle anti-bloqueio. Centralize seus disparos e eleve suas vendas a outro nível.
 
                     <div class="grid grid-cols-3 gap-4 max-w-md">
                         <div class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
@@ -61,8 +60,8 @@
                             <p class="mt-1 text-xs text-slate-200">Mensagens enviadas/mês</p>
                         </div>
                         <div class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
-                            <p class="text-2xl font-semibold text-white">99.9%</p>
-                            <p class="mt-1 text-xs text-slate-200">Uptime da plataforma</p>
+                            <p class="text-2xl font-semibold text-white">+100</p>
+                            <p class="mt-1 text-xs text-slate-200">Empresas Ativas</p>
                         </div>
                         <div class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
                             <p class="text-2xl font-semibold text-white">24/7</p>
