``` feat: adicionar autenticação WebSocket, melhorias UX e documentação de deploy
MUDANÇAS PRINCIPAIS:

1. Segurança WebSocket:
   - Adicionar autenticação Socket.IO com Firebase token
   - Logs de debug para conexão/desconexão/erros
   - Validar token antes de aceitar conexões

2. Dependências:
   - express-validator: 7.3.1 (validação de inputs)
   - helmet: 8.1.0 (headers de segurança)

3. UX Melhorias (app.js):
   - Modal bonito para criar campanhas
   - Preview WhatsApp em tempo real
   - Console

--- a/public/login.html
+++ b/public/login.html
@@ -284,8 +284,7 @@
                 ? 'p-4 rounded-lg text-sm border flex items-center gap-3 bg-green-50 text-green-700 border-green-200 slide-in'
                 : 'p-4 rounded-lg text-sm border flex items-center gap-3 bg-red-50 text-red-700 border-red-200 slide-in';
             
-            const icon = type === 'success' ? '✅' : '⚠️';
-            alertBox.innerHTML = `<span class="text-lg">${icon}</span><span>${message}</span>`;
+            alertBox.innerHTML = `<span>${message}</span>`;
         };
 
         window.hideAlert = function() {
