--- a/public/admin.html
+++ b/public/admin.html
@@ -36,13 +36,13 @@
     </header>
     <nav class="border-b border-slate-800 bg-slate-900/50">
         <div class="max-w-7xl mx-auto px-4 flex gap-1 py-2 overflow-x-auto">
-            <button class="tab-btn active px-4 py-2 text-sm rounded" data-tab="dashboard">📊 Dashboard</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="users">👥 Usuários</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="plans">💳 Planos</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="notices">📢 Avisos</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="settings">⚙️ Config</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="blacklist">🚫 Blacklist</button>
-            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="logs">📋 Logs</button>
+            <button class="tab-btn active px-4 py-2 text-sm rounded" data-tab="dashboard">Dashboard</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="users">Usuários</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="plans">Planos</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="notices">Avisos</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="settings">Configurações</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="blacklist">Blacklist</button>
+            <button class="tab-btn px-4 py-2 text-sm rounded text-slate-400" data-tab="logs">Logs</button>
         </div>
     </nav>
     <main class="max-w-7xl mx-auto px-4 py-8">
