--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,29 @@
         <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
     </div>
     
+    <!-- Overlay de assinatura necessária -->
+    <div id="subscriptionRequired" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(15, 23, 42, 0.97); z-index: 9998; align-items: center; justify-content: center;">
+        <div style="text-align: center; color: white; max-width: 420px; padding: 2rem;">
+            <div style="width: 80px; height: 80px; background: linear-gradient(135deg, #f59e0b, #d97706); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem;">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="white">
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                </svg>
+            </div>
+            <h2 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 0.75rem;">Assinatura Necessária</h2>
+            <p style="color: #94a3b8; margin-bottom: 1.5rem; line-height: 1.6;">
+                Para acessar o painel e enviar mensagens, você precisa ter uma assinatura ativa. Escolha um plano para continuar.
+            </p>
+            <div style="display: flex; flex-direction: column; gap: 0.75rem;">
+                <a href="/plans.html" style="display: inline-block; background: linear-gradient(135deg, #6366f1, #4f46e5); color: white; padding: 0.875rem 2rem; border-radius: 0.5rem; text-decoration: none; font-weight: 600; transition: transform 0.2s;">
+                    Ver Planos
+                </a>
+                <button onclick="logoutAndRedirect()" style="background: transparent; border: 1px solid #475569; color: #94a3b8; padding: 0.75rem 1.5rem; border-radius: 0.5rem; cursor: pointer; font-size: 0.875rem;">
+                    Sair da conta
+                </button>
+            </div>
+        </div>
+    </div>
+    
     <div class="container" id="mainContainer" style="display: none;">
         <!-- Header -->
         <header class="header">
