--- a/public/login.html
+++ b/public/login.html
@@ -200,7 +200,7 @@
 
                         <button type="submit"
                             class="inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-indigo-500 px-4 py-2.5 text-sm font-semibold text-white shadow-md transition hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-offset-2 focus:ring-offset-slate-900 hover:-translate-y-0.5">
-                            CA interiar minha conta
+                            Criar Minha conta
                         </button>
                     </form>
 
