feat: Adiciona as páginas principais e a estrutura inicial do aplicativo, incluindo o painel, login e outras telas essenciais.

--- a/public/landing.html
+++ b/public/landing.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vext - Automação Segura de WhatsApp</title>
-    <meta name="description" content="Pare de perder chips. O sistema definitivo de disparo em massa com proteção anti-banimento.">
+    <title>Arauto - Automação Segura de WhatsApp</title>
+    <meta name="description"
+        content="Pare de perder chips. O sistema definitivo de disparo em massa com proteção anti-banimento.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #25D366; /* WhatsApp Green */
+            --primary: #25D366;
+            /* WhatsApp Green */
             --primary-dark: #128C7E;
             --bg: #0f172a;
             --surface: #1e293b;
@@ -74,8 +77,8 @@
             background: var(--surface);
             border-radius: 20px;
             padding: 10px;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-            border: 1px solid rgba(255,255,255,0.1);
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .video-placeholder {
@@ -129,10 +132,10 @@
         }
 
         .card {
-            background: rgba(255,255,255,0.03);
+            background: rgba(255, 255, 255, 0.03);
             padding: 30px;
             border-radius: 16px;
-            border: 1px solid rgba(255,255,255,0.05);
+            border: 1px solid rgba(255, 255, 255, 0.05);
             transition: transform 0.2s;
         }
 
@@ -190,16 +193,19 @@
         }
     </style>
 </head>
+
 <body>
 
     <section class="hero">
         <div class="container">
-            <div style="margin-bottom: 20px; display: inline-block; padding: 5px 15px; background: rgba(37, 211, 102, 0.1); color: var(--primary); border-radius: 20px; font-weight: 600; font-size: 0.9rem;">
+            <div
+                style="margin-bottom: 20px; display: inline-block; padding: 5px 15px; background: rgba(37, 211, 102, 0.1); color: var(--primary); border-radius: 20px; font-weight: 600; font-size: 0.9rem;">
                 🚀 Nova Tecnologia Anti-Banimento 2024
             </div>
             <h1>Pare de Perder Chips.<br><span>Escale Suas Vendas.</span></h1>
-            <p>A única plataforma de disparo em massa que usa <strong>Múltiplas Instâncias</strong> e <strong>Rotação Inteligente</strong> para blindar sua operação.</p>
-            
+            <p>A única plataforma de disparo em massa que usa <strong>Múltiplas Instâncias</strong> e <strong>Rotação
+                    Inteligente</strong> para blindar sua operação.</p>
+
             <a href="#demo" class="btn">Ver Como Funciona</a>
         </div>
     </section>
@@ -219,22 +225,25 @@
 
     <section class="features">
         <div class="container">
-            <h2 style="text-align: center; font-size: 2.5rem;">Por que o Vext é Diferente?</h2>
+            <h2 style="text-align: center; font-size: 2.5rem;">Por que o Arauto é Diferente?</h2>
             <div class="grid">
                 <div class="card">
                     <span class="icon">🛡️</span>
                     <h3>Anti-Banimento Real</h3>
-                    <p>Não usamos apenas um chip. Conecte 5, 10 ou 50 WhatsApps e o sistema distribui o envio entre eles automaticamente (Round-Robin).</p>
+                    <p>Não usamos apenas um chip. Conecte 5, 10 ou 50 WhatsApps e o sistema distribui o envio entre eles
+                        automaticamente (Round-Robin).</p>
                 </div>
                 <div class="card">
                     <span class="icon">🔄</span>
                     <h3>Rotação de Mensagens</h3>
-                    <p>O sistema nunca manda a mesma mensagem duas vezes. Ele alterna variações e personaliza com o nome do cliente para evitar detecção de spam.</p>
+                    <p>O sistema nunca manda a mesma mensagem duas vezes. Ele alterna variações e personaliza com o nome
+                        do cliente para evitar detecção de spam.</p>
                 </div>
                 <div class="card">
                     <span class="icon">📊</span>
                     <h3>Gestão Profissional</h3>
-                    <p>Pause, retome e acompanhe o status de cada envio. Ideal para agências que precisam prestar contas para clientes.</p>
+                    <p>Pause, retome e acompanhe o status de cada envio. Ideal para agências que precisam prestar contas
+                        para clientes.</p>
                 </div>
             </div>
         </div>
@@ -243,16 +252,20 @@
     <section class="cta-section">
         <div class="container">
             <h2>Pronto para Blindar sua Operação?</h2>
-            <p style="margin: 20px 0 40px; color: var(--text-muted);">Estou selecionando 3 parceiros para implementação assistida esta semana.</p>
-            <a href="https://wa.me/SEU_NUMERO_AQUI?text=Vi%20a%20landing%20page%20do%20Vext%20e%20quero%20saber%20mais" class="btn">
+            <p style="margin: 20px 0 40px; color: var(--text-muted);">Estou selecionando 3 parceiros para implementação
+                assistida esta semana.</p>
+            <a href="https://wa.me/SEU_NUMERO_AQUI?text=Vi%20a%20landing%20page%20do%20Arauto%20e%20quero%20saber%20mais"
+                class="btn">
                 Quero Agendar uma Demo ➝
             </a>
         </div>
     </section>
 
-    <footer style="text-align: center; padding: 40px; color: var(--text-muted); border-top: 1px solid rgba(255,255,255,0.05);">
-        <p>&copy; 2024 Vext Automation. Todos os direitos reservados.</p>
+    <footer
+        style="text-align: center; padding: 40px; color: var(--text-muted); border-top: 1px solid rgba(255,255,255,0.05);">
+        <p>&copy; 2024 Arauto Automation. Todos os direitos reservados.</p>
     </footer>
 
 </body>
+
 </html>
