--- a/public/payment-success.html
+++ b/public/payment-success.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento Confirmado - Vext</title>
+  <title>Pagamento Confirmado - Arauto</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Inter', sans-serif;
+    }
   </style>
 </head>
+
 <body class="min-h-screen bg-slate-950 text-slate-100">
   <div class="relative min-h-screen overflow-hidden flex items-center justify-center">
     <div class="pointer-events-none absolute inset-0">
@@ -19,7 +23,8 @@
 
     <div class="relative z-10 max-w-md mx-auto px-4 text-center">
       <div class="mb-6">
-        <div class="inline-flex items-center justify-center w-20 h-20 rounded-full bg-emerald-500/20 border-2 border-emerald-400/50 mb-4">
+        <div
+          class="inline-flex items-center justify-center w-20 h-20 rounded-full bg-emerald-500/20 border-2 border-emerald-400/50 mb-4">
           <svg class="w-10 h-10 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
           </svg>
@@ -35,10 +40,13 @@
       </div>
 
       <div class="space-y-3">
-        <a href="/" class="block w-full rounded-lg bg-emerald-500 px-4 py-3 text-sm font-semibold text-white hover:bg-emerald-400 transition">
+        <a href="/"
+          class="block w-full rounded-lg bg-emerald-500 px-4 py-3 text-sm font-semibold text-white hover:bg-emerald-400 transition">
           Acessar Painel
         </a>
-        <a href="/login.html" id="loginLink" class="block w-full rounded-lg border border-slate-700 px-4 py-3 text-sm font-semibold text-slate-300 hover:bg-slate-800 transition" style="display: none;">
+        <a href="/login.html" id="loginLink"
+          class="block w-full rounded-lg border border-slate-700 px-4 py-3 text-sm font-semibold text-slate-300 hover:bg-slate-800 transition"
+          style="display: none;">
           Fazer Login
         </a>
       </div>
@@ -76,7 +84,7 @@
             headers: { 'Authorization': `Bearer ${token}` }
           });
           const data = await response.json();
-          
+
           if (data.success && data.hasSubscription) {
             document.getElementById('planName').textContent = data.planName || 'Plano Ativo';
             document.getElementById('planStatus').textContent = `Status: ${data.status === 'active' ? 'Ativo' : data.status}`;
@@ -95,4 +103,5 @@
     localStorage.removeItem('vextSelectedPlan');
   </script>
 </body>
+
 </html>
